# Firewall

./: Firewall.sln  LICENSE
Documents/: הצעת_פרויקט.docx
Firewall/: Firewall.sln
Firewall/Firewall/: App.axaml  App.axaml.cs  Firewall.csproj  ViewLocator.cs
Firewall/Firewall.Browser/: Firewall.Browser.csproj  Program.cs
Firewall/Firewall.Browser/Properties/: launchSettings.json
Firewall/Firewall.Browser/wwwroot/: index.html
Firewall/Firewall.Desktop/: Firewall.Desktop.csproj  Program.cs  app.manifest
Firewall/Firewall/ViewModels/: FirewallConfigViewModel.cs  MainViewModel.cs  ViewModelBase.cs
Firewall/Firewall/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Styles.axaml
Firewall/Firewall/Views/SecondryViews/: FirewallConfigView.axaml  FirewallConfigView.axaml.cs
FirewallFilter/: CMakeLists.txt  main.cpp
FirewallFilter/demo/: demo-main.cpp
FirewallFilter/src/filtering/: filtering.cpp  filtering.hpp
FirewallFilter/src/filtering/automata/: ac-util.hpp  aho-corasick.cpp  aho-corasick.hpp  compressed-ac.cpp  compressed-ac.hpp  regex-ac-extractor.cpp  regex-ac-extractor.hpp
FirewallFilter/src/filtering/enforcers/: encrypted-tunnel-detection-enforcer.cpp  encrypted-tunnel-detection-enforcer.hpp  ip-port-enforcer.cpp  ip-port-enforcer.hpp  payload-length-enforcer.cpp  payload-length-enforcer.hpp  rate-limit-enforcer.cpp  rate-limit-enforcer.hpp  regex-enforcer.cpp  regex-enforcer.hpp  tcp-state-enforcer.cpp  tcp-state-enforcer.hpp  tls-fingerprint-enforcer.cpp  tls-fingerprint-enforcer.hpp
FirewallFilter/src/filtering/engine/: cpu-monitor.cpp  firewall-engine.cpp  firewall-engine.hpp  nfq_handler.cpp  nfq_handler.hpp  packet-processor.cpp  packet-processor.hpp
FirewallFilter/src/filtering/rules/: firewall-rule.cpp  firewall-rule.hpp  rule-parser.cpp  rule-parser.hpp
FirewallFilter/src/filtering/tcp/: connection-state.hpp  connection-tracker.cpp  connection-tracker.hpp
FirewallFilter/src/filtering/utils/: LCGRandom.cpp  LCGRandom.hpp  cpu-monitor.cpp  cpu-monitor.hpp  helpers.cpp  helpers.hpp  logger.cpp  logger.hpp  perf-monitor.cpp  perf-monitor.hpp
FirewallFilter/src/ipc/: server-connect.cpp  server-connect.hpp
FirewallService/: FirewallService.kdev4  FirewallService.sln  conf-sudo-dotnet.sh  run.sh  start_debug.sh  start_debug.sh.save
FirewallService/FirewallService/: FirewallService.csproj  FirewallService.kdev4  Logger.cs  Program.cs  Worker.cs  build-linux.bat
FirewallService/FirewallService/.kdev4/: FirewallService.kdev4
FirewallService/FirewallService/DB/: AppDBContext.cs  DBManager.cs
FirewallService/FirewallService/DB/Entities/: Connection.cs  ConnectionClass.cs  EncryptedTunnelDetectionEnforcer.cs  EncryptedTunnelIntegrityEnforcer.cs  Enforcer.cs  FirewallRule.cs  FirewallRuleEnforcer.cs  IDataBaseEntity.cs  IpPortEnforcer.cs  Packet.cs  PayloadLengthEnforcer.cs  Protocol.cs  ProtocolEnforecer.cs  RateLimitingEnforcer.cs  Record.cs  RegexEnforcer.cs  TCPStateEnforcer.cs  TLSFingerprintEnforcer.cs
FirewallService/FirewallService/NativeInterop/: UnixNative.cs
FirewallService/FirewallService/Properties/: launchSettings.json
FirewallService/FirewallService/publish/: FirewallService
FirewallService/FirewallService/publish/publish/: FirewallService.deps.json
FirewallService/FirewallService/src/DB/: AppDBContext.cs
FirewallService/FirewallService/src/DB/Entities/: Connection.cs  ConnectionClass.cs  EncryptedTunnelDetectionEnforcer.cs  EncryptedTunnelIntegrityEnforcer.cs  Enforcer.cs  FirewallRule.cs  FirewallRuleEnforcer.cs  Packet.cs  PayloadLengthEnforcer.cs  Protocol.cs  (+5 more)
FirewallService/FirewallService/src/NativeInterop/: UnixCredentials.cs
FirewallService/FirewallService/src/auth/: ActionManager.cs  AuthManager.cs  FileManager.cs  PasswordHasher.cs  PermissionManager.cs
FirewallService/FirewallService/src/ipc/: EncryptionManager.cs  Epoll.cs  Server.cs
FirewallService/FirewallService/src/managers/: ActionManager.cs  AuthManager.cs  DBManager.cs  GeneralManager.cs  PasswordHasher.cs  PermissionManager.cs
FirewallService/FirewallService/src/util/: Cache.cs  ConsoleUtils.cs  IStreamableObject.cs  ModifiableQueue.cs  UtilityMethods.cs
FirewallSharedObject/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.py
FirewallSharedObject/.cmake/api/v1/reply/: cache-v2-705b547c01eefb526fb6.json  cmakeFiles-v1-a0a7a2df02cf51736681.json  codemodel-v2-4f4fb3a2d713ef5c17b0.json  index-2025-04-13T07-39-57-0491.json  target-FirewallSharedObject-Debug-b868c84409ca28207e24.json
FirewallSharedObject/src/: fwso-main-private.cpp  fwso-main-public.cpp  fwso-main.cpp  fwso-main.hpp  utility-types.cpp  utility-types.hpp  utils.cpp  utils.hpp
FirewallSharedObject/src/structs/: db-general-request.cpp  db-general-request.hpp  enums.hpp  fw-message.cpp  fw-message.hpp  general-request-wrapper.cpp  general-request-wrapper.hpp
(+49 files in other folders)
